[gd_scene load_steps=7 format=3 uid="uid://h0luygec5mwn"]

[ext_resource type="PackedScene" uid="uid://ow2gujx12ivf" path="res://scenes/blocks/GenericBlock.tscn" id="1_nfpxs"]
[ext_resource type="PackedScene" uid="uid://bgv3qn41l83pg" path="res://scenes/Connector.tscn" id="2_o5vwv"]
[ext_resource type="Script" path="res://scripts/lambda_builder.gd" id="3_0c4ka"]
[ext_resource type="Script" path="res://scripts/lambda_artist.gd" id="4_h8lex"]
[ext_resource type="Script" path="res://scripts/lambda_drag_handle.gd" id="5_6brld"]
[ext_resource type="Texture2D" uid="uid://ciwcftiw8ej44" path="res://assets/expand.webp" id="6_lcgrm"]

[node name="GenericBlock3" instance=ExtResource("1_nfpxs")]
custom_minimum_size = Vector2(500, 250)
offset_right = 500.0
offset_bottom = 250.0
block_type = "lambda"

[node name="InType" parent="Connectors" index="0" instance=ExtResource("2_o5vwv")]
layout_mode = 0
offset_left = -231.0
offset_top = 104.0
offset_right = -183.0
offset_bottom = 152.0
is_square = true
wire_normal = Vector2(0, 1)

[node name="OutType" parent="Connectors" index="1" instance=ExtResource("2_o5vwv")]
layout_mode = 0
offset_left = -5.0
offset_top = 104.0
offset_right = 43.0
offset_bottom = 152.0
is_square = true
wire_normal = Vector2(0, 1)

[node name="OutFunction" parent="Connectors" index="2" instance=ExtResource("2_o5vwv")]
layout_mode = 0
offset_left = 229.0
offset_top = -24.0
offset_right = 277.0
offset_bottom = 24.0
wire_normal = Vector2(1, 0)

[node name="LambdaArtist" type="Node2D" parent="." index="1"]
script = ExtResource("4_h8lex")

[node name="Workspace" type="Control" parent="." index="2"]
layout_mode = 2
mouse_filter = 1

[node name="LambdaHandler" type="Node" parent="." index="3"]
script = ExtResource("3_0c4ka")

[node name="DragContainer" type="Control" parent="." index="4"]
layout_mode = 2

[node name="DragHandle" type="CenterContainer" parent="DragContainer" index="0"]
layout_mode = 0
offset_left = 205.0
offset_top = 80.0
offset_right = 245.0
offset_bottom = 120.0
script = ExtResource("5_6brld")

[node name="Sprite2D" type="Sprite2D" parent="DragContainer/DragHandle" index="0"]
position = Vector2(20, 20)
scale = Vector2(0.0517578, 0.0517578)
texture = ExtResource("6_lcgrm")
